--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -3,3 +3,106 @@
     margin: 0;
     padding: 0;
 }
+
+html {
+
+    font-size: clamp(14px, 1.2vw, 18px);
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    -webkit-text-size-adjust: 100%;
+
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    line-height: 1.5;
+    color: #222;
+    background-color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 0.5em 0;
+    font-weight: 600;
+    line-height: 1.2;
+    color: #111;
+    margin: 0;
+}
+
+h1 {
+    font-size: clamp(1.8rem, 4vw, 3rem);
+}
+
+h2 {
+    font-size: clamp(1.5rem, 3vw, 2.25rem);
+}
+
+h3 {
+    font-size: clamp(1.25rem, 2.5vw, 1.75rem);
+}
+
+h4 {
+    font-size: clamp(1.1rem, 2vw, 1.25rem);
+}
+
+h5 {
+    font-size: clamp(1rem, 1.5vw, 1.1rem);
+}
+
+h6 {
+    font-size: clamp(0.9rem, 1vw, 1rem);
+}
+
+
+p {
+    margin: 0 0 1em 0;
+    font-size: clamp(1rem, 1.2vw, 1.125rem);
+    color: #333;
+}
+
+
+a {
+    color: #0066cc;
+    text-decoration: none;
+    transition: color 0.2s ease-in-out;
+
+    &:hover,
+    &:focus {
+        color: #004999;
+        outline: none;
+        text-decoration: underline;
+    }
+}
+
+
+ul,
+ol {
+    margin: 0 0 1em 1.5em;
+    padding: 0;
+    color: #444;
+    font-size: clamp(1rem, 1.2vw, 1.125rem);
+}
+
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
