--- a/src/features/sidebar/ui/sidebar.scss
+++ b/src/features/sidebar/ui/sidebar.scss
@@ -31,8 +31,6 @@
 
         &-nav {
             ul {
-
-
                 display: flex;
                 flex-direction: column;
                 gap: 5px;
@@ -40,6 +38,7 @@
                 li {
                     font-weight: bold;
                     text-align: center;
+                    border-radius: 5px;
                     cursor: pointer;
 
                     a {
