feat:added details feature for order

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -119,3 +119,13 @@ img {
         padding: 30px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .layout {
+        main {
+            flex: 1;
+            padding: 20px;
+        }
+    }
+
+}
