--- a/src/features/products/ui/products.scss
+++ b/src/features/products/ui/products.scss
@@ -49,21 +49,40 @@
             }
 
             .products__item-price {
-                min-width: 70px;
+                min-width: 120px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
 
-                .products__price-value {
-                    font-weight: bold;
-                    font-size: 16px;
-                }
+                .product__price {
+                    display: flex;
+                    gap: 5px;
+                    align-items: center;
 
-                .products__price-currency {
-                    font-size: 14px;
-                    font-weight: 500;
+                    &.default {
+                        .products__price-value {
+                            font-weight: bold;
+                            font-size: 18px;
+                        }
+
+                        .products__price-currency {
+                            font-size: 18px;
+                            font-weight: bold;
+                        }
+                    }
+
+                    .products__price-value {
+                        font-weight: 500;
+                        font-size: 14px;
+                    }
+
+                    .products__price-currency {
+                        font-size: 14px;
+                        font-weight: 500;
+                    }
                 }
             }
+
 
             .products__item-date {
                 display: flex;
@@ -190,13 +209,33 @@
         flex-direction: column;
         align-items: center;
 
-        .modal__price-value {
-            font-weight: bold;
-            font-size: 18px;
-        }
+        .modal__price {
+            display: flex;
+            gap: 5px;
+            align-items: center;
 
-        .modal__price-currency {
-            font-size: 14px;
+            &.default {
+                .modal__price-value {
+                    font-weight: bold;
+                    font-size: 18px;
+                }
+
+                .modal__price-currency {
+                    font-size: 18px;
+                    font-weight: bold;
+                }
+            }
+
+
+            .modal__price-value {
+                font-weight: 500;
+                font-size: 14px;
+            }
+
+            .modal__price-currency {
+                font-weight: 500;
+                font-size: 14px;
+            }
         }
     }
 }
