--- a/src/features/sidebar/ui/sidebar.scss
+++ b/src/features/sidebar/ui/sidebar.scss
@@ -2,6 +2,11 @@
     height: 100%;
     padding: 0 !important;
 
+    .language__select {
+        max-width: fit-content;
+        margin: 0 auto;
+    }
+
     &__container {
         background-color: #e2e2e2;
         min-width: 250px;
