feat: added README.md

--- a/src/features/orders/ui/ordersPage.scss
+++ b/src/features/orders/ui/ordersPage.scss
@@ -190,6 +190,12 @@
         align-self: flex-end;
     }
 
+    &-error {
+        color: red;
+        font-size: 14px;
+        margin-top: 10px;
+    }
+
 }
 
 .modal__order {
